--- a/my personal/akshaj-personal/src/App.css
+++ b/my personal/akshaj-personal/src/App.css
@@ -4,11 +4,27 @@
   padding: 2rem;
   text-align: center;
 }
-/* filepath: /Users/akshaj/Coding (on mac)/my personal/akshaj-personal/src/App.css */
+
 .leaflet-container {
   height: 500px;
   width: 100%;
 }
+
+form {
+  margin: 20px 0;
+  text-align: center;
+}
+
+input {
+  padding: 10px;
+  width: 200px;
+  margin-right: 10px;
+}
+
+button {
+  padding: 10px;
+}
+
 
 @keyframes logo-spin {
   from {
